[package]
name = "yass-codegen-tests"
version = "0.1.1"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
build = "build.rs"
publish = false

[build-dependencies]
yass-codegen = { path = "../yass-codegen", version = "=0.1.1" }

[dev-dependencies]
yass = { path = "../yass", version = "=0.1.1" }
yass-aux = { path = "../yass-aux", version = "=0.1.1" }
yass-schema-error = { path = "../yass-schema-error", version = "=0.1.1" }
